--- a/Aneurysm EDA.ipynb
+++ b/Aneurysm EDA.ipynb
@@ -2,15 +2,287 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>case_id</th>\n",
+       "      <th>patient_id</th>\n",
+       "      <th>aneurysmLocation</th>\n",
+       "      <th>aneurysmType</th>\n",
+       "      <th>ruptureStatus</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>multipleAneurysms</th>\n",
+       "      <th>sacVolume</th>\n",
+       "      <th>sacSurfaceArea</th>\n",
+       "      <th>...</th>\n",
+       "      <th>maxPressure</th>\n",
+       "      <th>meanPressure</th>\n",
+       "      <th>maxSpeed</th>\n",
+       "      <th>meanSpeed</th>\n",
+       "      <th>minTAWSS</th>\n",
+       "      <th>maxTAWSS</th>\n",
+       "      <th>meanTAWSS</th>\n",
+       "      <th>minOSI</th>\n",
+       "      <th>maxOSI</th>\n",
+       "      <th>meanOSI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>C0001</td>\n",
+       "      <td>P0085</td>\n",
+       "      <td>ICA</td>\n",
+       "      <td>LAT</td>\n",
+       "      <td>U</td>\n",
+       "      <td>53</td>\n",
+       "      <td>F</td>\n",
+       "      <td>False</td>\n",
+       "      <td>125.259604</td>\n",
+       "      <td>120.453515</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>C0002</td>\n",
+       "      <td>P0112</td>\n",
+       "      <td>ICA</td>\n",
+       "      <td>LAT</td>\n",
+       "      <td>U</td>\n",
+       "      <td>35</td>\n",
+       "      <td>F</td>\n",
+       "      <td>False</td>\n",
+       "      <td>119.002032</td>\n",
+       "      <td>122.427263</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>C0003</td>\n",
+       "      <td>P0115</td>\n",
+       "      <td>ICA</td>\n",
+       "      <td>TER</td>\n",
+       "      <td>U</td>\n",
+       "      <td>43</td>\n",
+       "      <td>F</td>\n",
+       "      <td>False</td>\n",
+       "      <td>12.740609</td>\n",
+       "      <td>23.480617</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>C0004</td>\n",
+       "      <td>P0116</td>\n",
+       "      <td>ICA</td>\n",
+       "      <td>TER</td>\n",
+       "      <td>U</td>\n",
+       "      <td>60</td>\n",
+       "      <td>F</td>\n",
+       "      <td>True</td>\n",
+       "      <td>9.376307</td>\n",
+       "      <td>18.084625</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>C0005</td>\n",
+       "      <td>P0118</td>\n",
+       "      <td>ICA</td>\n",
+       "      <td>LAT</td>\n",
+       "      <td>R</td>\n",
+       "      <td>26</td>\n",
+       "      <td>F</td>\n",
+       "      <td>False</td>\n",
+       "      <td>37.934454</td>\n",
+       "      <td>54.844592</td>\n",
+       "      <td>...</td>\n",
+       "      <td>7665.0</td>\n",
+       "      <td>3722.28</td>\n",
+       "      <td>70.275319</td>\n",
+       "      <td>13.19376</td>\n",
+       "      <td>0.31251</td>\n",
+       "      <td>176.44</td>\n",
+       "      <td>20.90888</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.44672</td>\n",
+       "      <td>0.001574</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 62 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  case_id patient_id aneurysmLocation aneurysmType ruptureStatus  age sex  \\\n",
+       "0   C0001      P0085              ICA          LAT             U   53   F   \n",
+       "1   C0002      P0112              ICA          LAT             U   35   F   \n",
+       "2   C0003      P0115              ICA          TER             U   43   F   \n",
+       "3   C0004      P0116              ICA          TER             U   60   F   \n",
+       "4   C0005      P0118              ICA          LAT             R   26   F   \n",
+       "\n",
+       "   multipleAneurysms   sacVolume  sacSurfaceArea  ...  maxPressure  \\\n",
+       "0              False  125.259604      120.453515  ...          NaN   \n",
+       "1              False  119.002032      122.427263  ...          NaN   \n",
+       "2              False   12.740609       23.480617  ...          NaN   \n",
+       "3               True    9.376307       18.084625  ...          NaN   \n",
+       "4              False   37.934454       54.844592  ...       7665.0   \n",
+       "\n",
+       "   meanPressure   maxSpeed  meanSpeed  minTAWSS  maxTAWSS  meanTAWSS  minOSI  \\\n",
+       "0           NaN        NaN        NaN       NaN       NaN        NaN     NaN   \n",
+       "1           NaN        NaN        NaN       NaN       NaN        NaN     NaN   \n",
+       "2           NaN        NaN        NaN       NaN       NaN        NaN     NaN   \n",
+       "3           NaN        NaN        NaN       NaN       NaN        NaN     NaN   \n",
+       "4       3722.28  70.275319   13.19376   0.31251    176.44   20.90888     0.0   \n",
+       "\n",
+       "    maxOSI   meanOSI  \n",
+       "0      NaN       NaN  \n",
+       "1      NaN       NaN  \n",
+       "2      NaN       NaN  \n",
+       "3      NaN       NaN  \n",
+       "4  0.44672  0.001574  \n",
+       "\n",
+       "[5 rows x 62 columns]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.colors import ListedColormap\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.datasets import make_classification\n",
+    "\n",
+    "# Specify the file path\n",
+    "file_path = \"Merged_Aneurysm.csv\"\n",
+    "\n",
+    "# Load the CSV file into a Pandas DataFrame\n",
+    "data = pd.read_csv(file_path)\n",
+    "\n",
+    "# Display the first few rows of the DataFrame to verify the data has been loaded correctly\n",
+    "data.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['case_id', 'patient_id', 'aneurysmLocation', 'aneurysmType',\n",
+      "       'ruptureStatus', 'age', 'sex', 'multipleAneurysms', 'sacVolume',\n",
+      "       'sacSurfaceArea', 'vdcVolume', 'vdcSurfaceArea', 'sacSectionArea',\n",
+      "       'ellipsoidVolume', 'ellipsoidMaxSemiaxis', 'ellipsoidMidSemiaxis',\n",
+      "       'ellipsoidMinSemiaxis', 'sacCenterlineLength', 'ostiumSectionArea',\n",
+      "       'ostiumSectionPerimeter', 'ostiumMinSize', 'ostiumMaxSize',\n",
+      "       'ostiumShapeFactor', 'aspectRatio_star', 'sizeRatio_star',\n",
+      "       'vesselDiameter', 'neckVesselAngle', 'sacVesselAngle', 'sacMinPressure',\n",
+      "       'sacMaxPressure', 'sacMeanPressure', 'sacMaxSpeed', 'sacMeanSpeed',\n",
+      "       'sacMinTAWSS', 'sacMaxTAWSS', 'sacMeanTAWSS', 'sacMinOSI', 'sacMaxOSI',\n",
+      "       'sacMeanOSI', 'vesselName', 'length', 'meanRadius', 'meanCurvature',\n",
+      "       'meanTorsion', 'tortuosity', 'minRadius', 'maxRadius', 'maxCurvature',\n",
+      "       'maxTorsion', 'bifurcationAngleInPlane', 'bifurcationAngleOutOfPlane',\n",
+      "       'minPressure', 'maxPressure', 'meanPressure', 'maxSpeed', 'meanSpeed',\n",
+      "       'minTAWSS', 'maxTAWSS', 'meanTAWSS', 'minOSI', 'maxOSI', 'meanOSI'],\n",
+      "      dtype='object')\n",
+      " (103, 62)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{data.columns}\\n {data.shape}')\n",
+    "\n",
+    "characteristics = [f'{data.columns}']"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
