--- a/Aneurysm EDA.ipynb
+++ b/Aneurysm EDA.ipynb
@@ -763,6 +763,343 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Features sorted by p-value (ascending order):\n",
+      "aneurysmLocation_ICA: p-value = 3.1536914915289994e-29\n",
+      "meanCurvature: p-value = 4.11580834362656e-24\n",
+      "tortuosity: p-value = 3.0778339725542343e-23\n",
+      "sacSectionArea: p-value = 3.2372834347277954e-23\n",
+      "maxCurvature: p-value = 4.922392370738303e-23\n",
+      "ellipsoidMidSemiaxis: p-value = 9.903278322302643e-23\n",
+      "vdcSurfaceArea: p-value = 3.1191045909949935e-22\n",
+      "ellipsoidMinSemiaxis: p-value = 2.8568399198380798e-21\n",
+      "sacSurfaceArea: p-value = 1.0937705140170492e-20\n",
+      "maxRadius: p-value = 1.746267835002532e-20\n",
+      "vdcVolume: p-value = 2.809884591981343e-20\n",
+      "sacVolume: p-value = 9.617897808747378e-20\n",
+      "meanRadius: p-value = 2.0076013391530193e-19\n",
+      "ostiumSectionArea: p-value = 4.185184600408763e-18\n",
+      "ellipsoidVolume: p-value = 7.172412292430598e-18\n",
+      "ellipsoidMaxSemiaxis: p-value = 1.3789468768236526e-17\n",
+      "ostiumMinSize: p-value = 2.5258289034892906e-17\n",
+      "aneurysmType_TER: p-value = 2.6720388826096987e-17\n",
+      "ostiumSectionPerimeter: p-value = 5.426388778923464e-16\n",
+      "sacCenterlineLength: p-value = 6.407400259560126e-16\n",
+      "vesselDiameter: p-value = 2.7967676326872723e-15\n",
+      "ostiumMaxSize: p-value = 3.3817733307106995e-14\n",
+      "Hierarchical_Cluster: p-value = 2.4030859501816236e-12\n",
+      "neckVesselAngle: p-value = 1.7686102832713163e-10\n",
+      "minRadius: p-value = 7.165108145604549e-07\n",
+      "sacVesselAngle: p-value = 1.920654525756674e-06\n",
+      "aneurysmLocation_MCA: p-value = 3.1508828428163915e-06\n",
+      "sizeRatio_star: p-value = 1.0950377678587586e-05\n",
+      "bifurcationAngleInPlane: p-value = 0.005652829391644281\n",
+      "sex_M: p-value = 0.008429786482112872\n",
+      "bifurcationAngleOutOfPlane: p-value = 0.00956817581275619\n",
+      "age: p-value = 0.08324422693308191\n",
+      "ruptureStatus_U: p-value = 0.13301629857705652\n",
+      "meanTorsion: p-value = 0.14486629649546554\n",
+      "ostiumShapeFactor: p-value = 0.17926820332143795\n",
+      "aspectRatio_star: p-value = 0.29212722209651204\n",
+      "aneurysmLocation_BAS: p-value = 0.37136902217313456\n",
+      "multipleAneurysms_True: p-value = 0.4641749453364501\n",
+      "maxTorsion: p-value = 0.6873251260639115\n",
+      "\n",
+      "Significant features (p-value < 0.05):\n",
+      "aneurysmLocation_ICA: p-value = 3.1536914915289994e-29\n",
+      "meanCurvature: p-value = 4.11580834362656e-24\n",
+      "tortuosity: p-value = 3.0778339725542343e-23\n",
+      "sacSectionArea: p-value = 3.2372834347277954e-23\n",
+      "maxCurvature: p-value = 4.922392370738303e-23\n",
+      "ellipsoidMidSemiaxis: p-value = 9.903278322302643e-23\n",
+      "vdcSurfaceArea: p-value = 3.1191045909949935e-22\n",
+      "ellipsoidMinSemiaxis: p-value = 2.8568399198380798e-21\n",
+      "sacSurfaceArea: p-value = 1.0937705140170492e-20\n",
+      "maxRadius: p-value = 1.746267835002532e-20\n",
+      "vdcVolume: p-value = 2.809884591981343e-20\n",
+      "sacVolume: p-value = 9.617897808747378e-20\n",
+      "meanRadius: p-value = 2.0076013391530193e-19\n",
+      "ostiumSectionArea: p-value = 4.185184600408763e-18\n",
+      "ellipsoidVolume: p-value = 7.172412292430598e-18\n",
+      "ellipsoidMaxSemiaxis: p-value = 1.3789468768236526e-17\n",
+      "ostiumMinSize: p-value = 2.5258289034892906e-17\n",
+      "aneurysmType_TER: p-value = 2.6720388826096987e-17\n",
+      "ostiumSectionPerimeter: p-value = 5.426388778923464e-16\n",
+      "sacCenterlineLength: p-value = 6.407400259560126e-16\n",
+      "vesselDiameter: p-value = 2.7967676326872723e-15\n",
+      "ostiumMaxSize: p-value = 3.3817733307106995e-14\n",
+      "Hierarchical_Cluster: p-value = 2.4030859501816236e-12\n",
+      "neckVesselAngle: p-value = 1.7686102832713163e-10\n",
+      "minRadius: p-value = 7.165108145604549e-07\n",
+      "sacVesselAngle: p-value = 1.920654525756674e-06\n",
+      "aneurysmLocation_MCA: p-value = 3.1508828428163915e-06\n",
+      "sizeRatio_star: p-value = 1.0950377678587586e-05\n",
+      "bifurcationAngleInPlane: p-value = 0.005652829391644281\n",
+      "sex_M: p-value = 0.008429786482112872\n",
+      "bifurcationAngleOutOfPlane: p-value = 0.00956817581275619\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Assuming the data is loaded into a DataFrame called data_encoded_with_rupture\n",
+    "\n",
+    "# Perform ANOVA for each feature\n",
+    "features = data_encoded_with_rupture.columns.difference(['Cluster', 'ruptureStatus'])\n",
+    "anova_results = {}\n",
+    "for feature in features:\n",
+    "    anova_results[feature] = stats.f_oneway(\n",
+    "        data_encoded_with_rupture[data_encoded_with_rupture['Cluster'] == 0][feature],\n",
+    "        data_encoded_with_rupture[data_encoded_with_rupture['Cluster'] == 1][feature],\n",
+    "        data_encoded_with_rupture[data_encoded_with_rupture['Cluster'] == 2][feature]\n",
+    "    )\n",
+    "\n",
+    "# Extract p-values and sort them\n",
+    "p_values = {feature: result.pvalue for feature, result in anova_results.items()}\n",
+    "sorted_p_values = dict(sorted(p_values.items(), key=lambda item: item[1]))\n",
+    "\n",
+    "# Display the sorted p-values\n",
+    "print(\"Features sorted by p-value (ascending order):\")\n",
+    "for feature, p_value in sorted_p_values.items():\n",
+    "    print(f\"{feature}: p-value = {p_value}\")\n",
+    "\n",
+    "# Identify significant features (e.g., p-value < 0.05)\n",
+    "significant_features = [feature for feature, p_value in sorted_p_values.items() if p_value < 0.05]\n",
+    "print(\"\\nSignificant features (p-value < 0.05):\")\n",
+    "for feature in significant_features:\n",
+    "    print(f\"{feature}: p-value = {sorted_p_values[feature]}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>aneurysmLocation_ICA</th>\n",
+       "      <th>meanCurvature</th>\n",
+       "      <th>tortuosity</th>\n",
+       "      <th>sacSectionArea</th>\n",
+       "      <th>maxCurvature</th>\n",
+       "      <th>ellipsoidMidSemiaxis</th>\n",
+       "      <th>vdcSurfaceArea</th>\n",
+       "      <th>ellipsoidMinSemiaxis</th>\n",
+       "      <th>sacSurfaceArea</th>\n",
+       "      <th>maxRadius</th>\n",
+       "      <th>...</th>\n",
+       "      <th>ostiumMaxSize</th>\n",
+       "      <th>Hierarchical_Cluster</th>\n",
+       "      <th>neckVesselAngle</th>\n",
+       "      <th>minRadius</th>\n",
+       "      <th>sacVesselAngle</th>\n",
+       "      <th>aneurysmLocation_MCA</th>\n",
+       "      <th>sizeRatio_star</th>\n",
+       "      <th>bifurcationAngleInPlane</th>\n",
+       "      <th>sex_M</th>\n",
+       "      <th>bifurcationAngleOutOfPlane</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cluster</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.653846</td>\n",
+       "      <td>0.114813</td>\n",
+       "      <td>0.544666</td>\n",
+       "      <td>71.483887</td>\n",
+       "      <td>0.292458</td>\n",
+       "      <td>4.174165</td>\n",
+       "      <td>291.238437</td>\n",
+       "      <td>3.625850</td>\n",
+       "      <td>322.276934</td>\n",
+       "      <td>2.323206</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.926529</td>\n",
+       "      <td>0.923077</td>\n",
+       "      <td>39.493972</td>\n",
+       "      <td>1.227342</td>\n",
+       "      <td>41.497149</td>\n",
+       "      <td>0.153846</td>\n",
+       "      <td>3.977073</td>\n",
+       "      <td>126.047644</td>\n",
+       "      <td>0.346154</td>\n",
+       "      <td>17.885089</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.054374</td>\n",
+       "      <td>0.029892</td>\n",
+       "      <td>17.689547</td>\n",
+       "      <td>0.099049</td>\n",
+       "      <td>1.987778</td>\n",
+       "      <td>69.213092</td>\n",
+       "      <td>1.712052</td>\n",
+       "      <td>80.788058</td>\n",
+       "      <td>1.299037</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.300237</td>\n",
+       "      <td>0.851064</td>\n",
+       "      <td>20.572253</td>\n",
+       "      <td>0.972891</td>\n",
+       "      <td>25.687920</td>\n",
+       "      <td>0.468085</td>\n",
+       "      <td>2.936702</td>\n",
+       "      <td>132.559817</td>\n",
+       "      <td>0.510638</td>\n",
+       "      <td>23.240482</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.966667</td>\n",
+       "      <td>0.156862</td>\n",
+       "      <td>0.858854</td>\n",
+       "      <td>19.163246</td>\n",
+       "      <td>0.401194</td>\n",
+       "      <td>2.158083</td>\n",
+       "      <td>83.843451</td>\n",
+       "      <td>1.801903</td>\n",
+       "      <td>92.037580</td>\n",
+       "      <td>2.320523</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.463457</td>\n",
+       "      <td>1.933333</td>\n",
+       "      <td>64.483657</td>\n",
+       "      <td>1.267026</td>\n",
+       "      <td>61.820177</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>2.002514</td>\n",
+       "      <td>112.048362</td>\n",
+       "      <td>0.166667</td>\n",
+       "      <td>16.957942</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 31 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         aneurysmLocation_ICA  meanCurvature  tortuosity  sacSectionArea  \\\n",
+       "Cluster                                                                    \n",
+       "0                    0.653846       0.114813    0.544666       71.483887   \n",
+       "1                    0.000000       0.054374    0.029892       17.689547   \n",
+       "2                    0.966667       0.156862    0.858854       19.163246   \n",
+       "\n",
+       "         maxCurvature  ellipsoidMidSemiaxis  vdcSurfaceArea  \\\n",
+       "Cluster                                                       \n",
+       "0            0.292458              4.174165      291.238437   \n",
+       "1            0.099049              1.987778       69.213092   \n",
+       "2            0.401194              2.158083       83.843451   \n",
+       "\n",
+       "         ellipsoidMinSemiaxis  sacSurfaceArea  maxRadius  ...  ostiumMaxSize  \\\n",
+       "Cluster                                                   ...                  \n",
+       "0                    3.625850      322.276934   2.323206  ...       3.926529   \n",
+       "1                    1.712052       80.788058   1.299037  ...       2.300237   \n",
+       "2                    1.801903       92.037580   2.320523  ...       2.463457   \n",
+       "\n",
+       "         Hierarchical_Cluster  neckVesselAngle  minRadius  sacVesselAngle  \\\n",
+       "Cluster                                                                     \n",
+       "0                    0.923077        39.493972   1.227342       41.497149   \n",
+       "1                    0.851064        20.572253   0.972891       25.687920   \n",
+       "2                    1.933333        64.483657   1.267026       61.820177   \n",
+       "\n",
+       "         aneurysmLocation_MCA  sizeRatio_star  bifurcationAngleInPlane  \\\n",
+       "Cluster                                                                  \n",
+       "0                    0.153846        3.977073               126.047644   \n",
+       "1                    0.468085        2.936702               132.559817   \n",
+       "2                    0.000000        2.002514               112.048362   \n",
+       "\n",
+       "            sex_M  bifurcationAngleOutOfPlane  \n",
+       "Cluster                                        \n",
+       "0        0.346154                   17.885089  \n",
+       "1        0.510638                   23.240482  \n",
+       "2        0.166667                   16.957942  \n",
+       "\n",
+       "[3 rows x 31 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Assuming the data is loaded into a DataFrame called data_encoded_with_rupture\n",
+    "\n",
+    "# List of significant features based on ANOVA results\n",
+    "significant_features = [\n",
+    "    'aneurysmLocation_ICA', 'meanCurvature', 'tortuosity', 'sacSectionArea', \n",
+    "    'maxCurvature', 'ellipsoidMidSemiaxis', 'vdcSurfaceArea', 'ellipsoidMinSemiaxis', \n",
+    "    'sacSurfaceArea', 'maxRadius', 'vdcVolume', 'sacVolume', 'meanRadius', \n",
+    "    'ostiumSectionArea', 'ellipsoidVolume', 'ellipsoidMaxSemiaxis', 'ostiumMinSize', \n",
+    "    'aneurysmType_TER', 'ostiumSectionPerimeter', 'sacCenterlineLength', 'vesselDiameter', \n",
+    "    'ostiumMaxSize', 'Hierarchical_Cluster', 'neckVesselAngle', 'minRadius', \n",
+    "    'sacVesselAngle', 'aneurysmLocation_MCA', 'sizeRatio_star', 'bifurcationAngleInPlane', \n",
+    "    'sex_M', 'bifurcationAngleOutOfPlane'\n",
+    "]\n",
+    "\n",
+    "# Calculate mean values for each cluster\n",
+    "cluster_means = data_encoded_with_rupture.groupby('Cluster')[significant_features].mean()\n",
+    "\n",
+    "# Display the mean values\n",
+    "cluster_means\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [
