--- a/Aneurysm EDA.ipynb
+++ b/Aneurysm EDA.ipynb
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1166,16 +1166,29 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "aneurysmLocation       ACA       BAS       ICA       MCA\n",
+      "Cluster                                                 \n",
+      "0                 0.444444  0.111111  0.018519  0.425926\n",
+      "1                 0.000000  0.020408  0.918367  0.061224\n",
+      "Chi-square test for ACA: p-value = 3.483139590802997e-07\n",
+      "Chi-square test for BAS: p-value = 0.15138266995559752\n",
+      "Chi-square test for ICA: p-value = 2.8146399357558743e-19\n",
+      "Chi-square test for MCA: p-value = 5.622950789746238e-05\n"
+     ]
     }
    ],
    "source": [
-    "from sklearn.feature_selection import mutual_info_classif\n",
+    "from scipy import stats\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "file_path = \"Merged_Aneurysm.csv\"\n",
-    "\n",
     "# Load the CSV file into a Pandas DataFrame\n",
+    "file_path = \"Merged_Aneurysm.csv\"\n",
     "data = pd.read_csv(file_path)\n",
     "\n",
     "# Assuming 'data' is your DataFrame and 'Cluster' is the column with cluster labels\n",
@@ -1194,11 +1207,6 @@
     "# Add cluster labels to the original data\n",
     "data['Cluster'] = clusters_tsne\n",
     "\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# Assuming 'data' is your DataFrame and it has 'Cluster' and 'aneurysmLocation' columns\n",
-    "\n",
     "# Group by cluster and aneurysm location, then normalize within each cluster\n",
     "location_distribution = data.groupby(['Cluster', 'aneurysmLocation']).size().unstack(fill_value=0)\n",
     "location_distribution = location_distribution.div(location_distribution.sum(axis=1), axis=0)\n",
@@ -1215,7 +1223,14 @@
     "\n",
     "# Display the plot\n",
     "plt.show()\n",
-    "\n"
+    "\n",
+    "print(location_distribution)\n",
+    "\n",
+    "# Chi-square test for statistical significance within each aneurysm location across clusters\n",
+    "for location in location_distribution.columns:\n",
+    "    contingency_table = pd.crosstab(data['Cluster'], data['aneurysmLocation'] == location)\n",
+    "    chi2, p_value, _, _ = stats.chi2_contingency(contingency_table)\n",
+    "    print(f'Chi-square test for {location}: p-value = {p_value}')\n"
    ]
   },
   {
