--- a/semi-supervised.ipynb
+++ b/semi-supervised.ipynb
@@ -1860,6 +1860,76 @@
     "print(f\"Mean Cross-Validation Accuracy: {grid_search.best_score_:.3f}\")\n",
     "print(f\"AUC-ROC Score: {auc_roc_best:.3f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'supervised_clustering_data_with_shap.csv'"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compile Results with SHAP Values\n",
+    "supervised_clustering_data = pd.DataFrame({\n",
+    "    'Cluster': cluster_labels,\n",
+    "    'f(x)': xgb_model.predict_proba(X_scaled)[:, 1]  # Predicted probabilities for positive class\n",
+    "})\n",
+    "\n",
+    "# Add SHAP values\n",
+    "shap_values_df = pd.DataFrame(shap_values.values, columns=X.columns)\n",
+    "supervised_clustering_data = pd.concat([supervised_clustering_data, shap_values_df], axis=1)\n",
+    "\n",
+    "# Add original feature values\n",
+    "feature_values_df = pd.DataFrame(X, columns=X.columns)\n",
+    "supervised_clustering_data = pd.concat([supervised_clustering_data, feature_values_df], axis=1, keys=['SHAP Values', 'Feature Values'])\n",
+    "\n",
+    "# Save to CSV\n",
+    "output_path = \"supervised_clustering_data_with_shap.csv\"\n",
+    "supervised_clustering_data.to_csv(output_path, index=False)\n",
+    "\n",
+    "output_path\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.11469987, -0.29660849, -0.18475665, ...,  1.11316236,\n",
+       "        -0.5810872 , -1.25499004],\n",
+       "       [-1.42737621, -0.31911495, -0.16991452, ...,  1.11316236,\n",
+       "        -0.5810872 , -1.25499004],\n",
+       "       [-0.8439645 , -0.70130294, -0.91397036, ...,  1.11316236,\n",
+       "        -0.5810872 ,  0.79681907],\n",
+       "       ...,\n",
+       "       [ 2.14602048, -0.40806375, -0.33458534, ...,  1.11316236,\n",
+       "        -0.5810872 , -1.25499004],\n",
+       "       [ 0.3228589 ,  2.93040714,  2.41433189, ..., -0.89834155,\n",
+       "         1.7209121 ,  0.79681907],\n",
+       "       [-0.91689097, -0.64861552, -0.7977794 , ..., -0.89834155,\n",
+       "         1.7209121 ,  0.79681907]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_scaled"
+   ]
   }
  ],
  "metadata": {
