--- a/SHAP.ipynb
+++ b/SHAP.ipynb
@@ -201,6 +201,41 @@
     "plt.legend()\n",
     "plt.show()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "File (C:\\Users\\shrin\\OneDrive\\Documents\\GitHub\\Intracranial-Aneurysm-Predictor-\\model.stl) not found",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 4\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyvista\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpv\u001b[39;00m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# Load the surface model\u001b[39;00m\n\u001b[1;32m----> 4\u001b[0m surface \u001b[38;5;241m=\u001b[39m pv\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodel.stl\u001b[39m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# or model.vtp\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Load the centerline\u001b[39;00m\n\u001b[0;32m      7\u001b[0m centerline \u001b[38;5;241m=\u001b[39m pv\u001b[38;5;241m.\u001b[39mread(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcenterlines.vtp\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\shrin\\anaconda3\\Lib\\site-packages\\pyvista\\core\\utilities\\fileio.py:175\u001b[0m, in \u001b[0;36mread\u001b[1;34m(filename, force_ext, file_format, progress_bar)\u001b[0m\n\u001b[0;32m    173\u001b[0m filename \u001b[38;5;241m=\u001b[39m Path(filename)\u001b[38;5;241m.\u001b[39mexpanduser()\u001b[38;5;241m.\u001b[39mresolve()\n\u001b[0;32m    174\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mis_file() \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m filename\u001b[38;5;241m.\u001b[39mis_dir():\n\u001b[1;32m--> 175\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mFile (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfilename\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) not found\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m    177\u001b[0m \u001b[38;5;66;03m# Read file using meshio.read if file_format is present\u001b[39;00m\n\u001b[0;32m    178\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file_format:\n",
+      "\u001b[1;31mFileNotFoundError\u001b[0m: File (C:\\Users\\shrin\\OneDrive\\Documents\\GitHub\\Intracranial-Aneurysm-Predictor-\\model.stl) not found"
+     ]
+    }
+   ],
+   "source": [
+    "import pyvista as pv\n",
+    "\n",
+    "# Load the surface model\n",
+    "surface = pv.read(\"model.stl\")  # or model.vtp\n",
+    "\n",
+    "# Load the centerline\n",
+    "centerline = pv.read(\"centerlines.vtp\")\n",
+    "\n",
+    "# Plot both together\n",
+    "plotter = pv.Plotter()\n",
+    "plotter.add_mesh(surface, color=\"lightblue\", opacity=0.7, label=\"Surface\")\n",
+    "plotter.add_mesh(centerline, color=\"red\", line_width=3, label=\"Centerline\")\n",
+    "plotter.add_legend()\n",
+    "plotter.show()\n"
+   ]
   }
  ],
  "metadata": {
