--- a/semi-supervised.ipynb
+++ b/semi-supervised.ipynb
@@ -2160,6 +2160,44 @@
     "for rule in ranked_rules[:5]:  # Display top 5 rules\n",
     "    print(replace_placeholders(rule, feature_map))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'supervised_clustering_data_with_shap.csv'"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compile Results with SHAP Values\n",
+    "supervised_clustering_data = pd.DataFrame({\n",
+    "    'Cluster': cluster_labels,\n",
+    "    'f(x)': xgb_model.predict_proba(X_scaled)[:, 1]  # Predicted probabilities for positive class\n",
+    "})\n",
+    "\n",
+    "# Add SHAP values\n",
+    "shap_values_df = pd.DataFrame(shap_values.values, columns=X.columns)\n",
+    "supervised_clustering_data = pd.concat([supervised_clustering_data, shap_values_df], axis=1)\n",
+    "\n",
+    "# Add original feature values\n",
+    "feature_values_df = pd.DataFrame(X, columns=X.columns)\n",
+    "supervised_clustering_data = pd.concat([supervised_clustering_data, feature_values_df], axis=1, keys=['SHAP Values', 'Feature Values'])\n",
+    "\n",
+    "# Save to CSV\n",
+    "output_path = \"supervised_clustering_data_with_shap.csv\"\n",
+    "supervised_clustering_data.to_csv(output_path, index=False)\n",
+    "\n",
+    "output_path\n"
+   ]
   }
  ],
  "metadata": {
